--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -61,8 +61,17 @@
 <script>
   window.addEventListener('keydown',function(e){
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+    audio.currentTime = 0
     audio.play()
+    key.classList.add('playing')
   })
+  function removetran(e){
+    if(e.propertyName != 'transform') return
+    this.classList.remove('playing')
+  }
+  const key = document.querySelectorAll('.key');
+  key.forEach(key => key.addEventListener('transitionend',removetran))
 </script>
 </body>
 </html>
