--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -63,13 +63,38 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05;
+      transition-timing-function: ease-in-out;
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand')
+    const minHand = document.querySelector('.min-hand')
+    const hourHand = document.querySelector('.hour-hand')
 
+    function setDate(){
+      const now = new Date()
+      const seconds = now.getSeconds()
+      const secondsDegree = ((seconds / 60) * 360) + 90
+      console.log(secondsDegree)
+      secondHand.style.transform = `rotate(${secondsDegree}deg)`
 
+      const min = now.getMinutes()
+      const minDegree = ((min / 60) * 360) + 90
+      console.log(minDegree)
+      minHand.style.transform = `rotate(${minDegree}deg)`
+
+      const hour = now.getHours()
+      const hourDegree = (( hour / 60) * 360 / 12)
+      console.log(hourDegree)
+      hourHand.style.transform = `rotate(${hourDegree}deg)`
+    }
+
+    setInterval(setDate,1000)
   </script>
 </body>
 </html>
